--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,28 @@
 ^^^^ During place order when user is asked to sign in, return user to cart to review merged cart after sign in due to merged carts.
 
+^^^^ add catchError to httpClient
+
+receiving error message from server and success message from client during add item
+
+in catchError, change error.error to error.message
+
+merged qty doesn't seem to be working
+
 cart in localStorage is lost when browser refreshed?????
+
+confirmation page
 
 google log in
 
-remove handleSearch from HeaderComponent. Now in Search component.
+send constructed server error message instead of relying on error.error on client
+
+^^^^ remove handleSearch from HeaderComponent. Now in Search component.
 
 ^^^^ Sign in successful message.
 
 checkout -- phone validation, etc
 
-checkout -- if billing address entered, programmatically add it to paypal's payload
+checkout -- if billing address entered, programatically add it to paypal's payload
 
 when token expires on backend but not on frontend, handle appropriately
 
