--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,9 @@
+after persistCartToServer, update cartSignal with returned cart
+
+cart may not be persisting
+
+phantom item in cart;
+
 merged qty doesn't seem to be working
 
 cart in localStorage is lost when browser refreshed?????
